test/spec/if-else-label-superfluous.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if-else-label-superfluous.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/if-else-label-superfluous.fail.wast:1:23: unexpected label "$l"
(module (func if else $l end))
                      ^^
;;; STDERR ;;)
